--- a/applications/dashboard/scss/_variables.scss
+++ b/applications/dashboard/scss/_variables.scss
@@ -217,7 +217,7 @@ $nav-pills-active-link-hover-color:         $component-active-color !default;
 
 $nav-pills-panel-border-radius:             $border-radius 0 0 $border-radius;
 
-$navbar-height:                             $spacer * 4;
+$navbar-height:                             to-rem(60);
 $navbar-active-link-active-bg:              #0cb0f8;
 $navbar-link-color:                         lighten($navbar-active-link-active-bg, 40%);
 
