--- a/applications/dashboard/scss/_variables.scss
+++ b/applications/dashboard/scss/_variables.scss
@@ -228,7 +228,7 @@ $toggle-padding:                            to-rem(2);
 
 // Padding
 $padding-default:                           $grid-gutter-width / 2;
-$border-color:                              #ddd;
+$border-color:                              #e7e8e9;
 
 $font-size-tables:                          to-rem(13);
 
