--- a/applications/dashboard/scss/_forms.scss
+++ b/applications/dashboard/scss/_forms.scss
@@ -113,6 +113,8 @@ label,
 
 // Form grid
 .form-group {
+  @extend .row;
+
   > .no-grid {
     @extend .row-padding-left;
     @extend .row-padding-right;
